--- a/src/scss/components/_C14-friends-cmhaa.scss
+++ b/src/scss/components/_C14-friends-cmhaa.scss
@@ -1,6 +1,7 @@
 .C14-friends-cmhaa {
   @include componentSpacingCompile();
   @include svgLine();
+  padding-top: 0;
 
   &__button {
     &-shown,
