--- a/src/scss/components/_C15-quote.scss
+++ b/src/scss/components/_C15-quote.scss
@@ -1,5 +1,5 @@
 .C15-quote {
-  @include componentSpacingCompile();
+  @include componentSpacingCompile($paddingTop: false);
 
   &__info {
     padding: 20px 0;
